@@ -1,6 +1,6 @@
 //  Gant -- A Groovy build framework based on scripting Ant tasks.
 //
-//  Copyright © 2006-7 Russel Winder
+//  Copyright © 2006-8 Russel Winder
 //
 //  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 //  compliance with the License. You may obtain a copy of the License at
@@ -25,6 +25,15 @@ final class Execute {
   //
   //  Don't use the Elvis operator since that would mean the code would not compile in Groovy 1.0.
   //
+  private void manageProcess ( final Process process , final Closure errProcessing , final Closure outProcessing , final Object command , final String tag ) {
+    //  Command can either be a String or a List.
+    binding.getVariable ( 'message' ) ( tag , command )
+    def errThread = Thread.start { process.err.eachLine ( errProcessing ) }
+    def inThread = Thread.start { process.in.eachLine ( outProcessing ) }
+    errThread.join ( )
+    inThread.join ( )
+    process.waitFor ( )
+  }
   /**
    *  Execute a command from the PATH.
    *
@@ -35,13 +44,11 @@ final class Execute {
    *  @parameter command the command as a single <code>String</code>.
    */
   void executable ( final Map keywordParameters = [:] , final String command ) {
-    def outProcessing = keywordParameters['outProcessing'] ? keywordParameters['outProcessing'] : { println ( it ) }
-    def errProcessing = keywordParameters['errProcessing'] ? keywordParameters['errProcessing'] : { System.err.println ( it ) }
-    binding.getVariable ( 'message' ) ( 'execute' , command )
-    def process = command.execute ( )
-    process.err.eachLine ( errProcessing )
-    process.in.eachLine ( outProcessing )
-    process.waitFor ( )
+    manageProcess ( command.execute ( ) ,
+                    keywordParameters['errProcessing'] ? keywordParameters['errProcessing'] : { System.err.println ( it ) },
+                    keywordParameters['outProcessing'] ? keywordParameters['outProcessing'] : { println ( it ) } ,
+                    command ,
+                    'execute' )
   }
   /**
    *  Execute a command from the PATH.
@@ -53,13 +60,11 @@ final class Execute {
    *  @parameter command the command as a  list of <code>String</code>s.
    */
   void executable ( final Map keywordParameters = [:] , final List command ) {
-    def outProcessing = keywordParameters['outProcessing'] ? keywordParameters['outProcessing'] : { println ( it ) }
-    def errProcessing = keywordParameters['errProcessing'] ? keywordParameters['errProcessing'] : { System.err.println ( it ) }
-    binding.getVariable ( 'message' ) ( 'execute' , command )
-    def process = command.execute ( )
-    process.err.eachLine ( errProcessing )
-    process.in.eachLine ( outProcessing )
-    process.waitFor ( )
+    manageProcess ( command.execute ( ) ,
+                    keywordParameters['errProcessing'] ? keywordParameters['errProcessing'] : { System.err.println ( it ) },
+                    keywordParameters['outProcessing'] ? keywordParameters['outProcessing'] : { println ( it ) } ,
+                    command ,
+                    'execute' )
   }
   /**
    *  Execute a command using a shell.
@@ -71,12 +76,10 @@ final class Execute {
    *  @parameter command the command as a single <code>String</code>.
    */
   void shell ( final Map keywordParameters = [:] , final String command ) {
-    def outProcessing = keywordParameters['outProcessing'] ? keywordParameters['outProcessing'] : { println ( it ) }
-    def errProcessing = keywordParameters['errProcessing'] ? keywordParameters['errProcessing'] : { System.err.println ( it ) }
-    binding.getVariable ( 'message' ) ( 'shell' , command )
-    def process = [ 'sh' , '-c' , command ].execute ( )
-    process.err.eachLine ( errProcessing )
-    process.in.eachLine ( outProcessing )
-    process.waitFor ( )
+    manageProcess ( [ 'sh' , '-c' , command ].execute ( ) ,
+                    keywordParameters['errProcessing'] ? keywordParameters['errProcessing'] : { System.err.println ( it ) },
+                    keywordParameters['outProcessing'] ? keywordParameters['outProcessing'] : { println ( it ) } ,
+                    command ,
+                    'shell' )
   }
 }
